login and show meals

--- a/src/app/pages/meals/meal/meal.page.html
+++ b/src/app/pages/meals/meal/meal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>inside</ion-title>
+    <ion-title>meal</ion-title>
   </ion-toolbar>
 </ion-header>
 
