--- a/src/app/pages/meals/meals.page.html
+++ b/src/app/pages/meals/meals.page.html
@@ -10,7 +10,7 @@
   <ion-card *ngFor="let meal of meals" (click)="openMealInTab(meal.id)">
     <ion-card-header>
       <ion-card-title color="primary">{{ meal.name }}</ion-card-title>
-      <ion-card-subtitle color="primary">Vesterbro</ion-card-subtitle>
+      <ion-card-subtitle color="primary">{{ meal.city }}</ion-card-subtitle>
     </ion-card-header>
 
     <ion-item>
