--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -5,5 +5,56 @@
 </ion-header>
 
 <ion-content>
+  <ion-item lines="none" padding-top padding-bottom>
+    <ion-avatar slot="start">
+      <img src="https://ionicframework.com/docs/demos/api/avatar/avatar.svg" />
+    </ion-avatar>
+    <ion-label>{{ user.email }}</ion-label>
+    <ion-icon
+      slot="end"
+      name="cog"
+      routerLink="/app/profile/info"
+      routerDirection="forward"
+    ></ion-icon>
+  </ion-item>
+  <ion-item-divider>
+    <ion-label>UPCOMING</ion-label>
+  </ion-item-divider>
+  <ion-list>
+    <ion-list-header color="primary">
+      <ion-label>Your upcoming meal pickups</ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let userFutureOrder of userFutureOrders">
+      <ion-label>{{ userFutureOrder.name }}</ion-label>
+    </ion-item>
+
+    <ion-list-header color="primary">
+      <ion-label>Your upcoming meal handouts</ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let userFutureMeal of userFutureMeals">
+      <ion-label>{{ userFutureMeal.name }}</ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-item-divider>
+    <ion-label padding-top>HISTORY</ion-label>
+  </ion-item-divider>
+  <ion-list>
+    <ion-list-header color="primary">
+      <ion-label>Meals you ate</ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let userPastOrder of userPastOrders">
+      <ion-label>{{ userPastOrder.name }}</ion-label>
+    </ion-item>
+    <ion-list-header color="primary">
+      <ion-label>Meals you cooked</ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let userPastMeal of userPastMeals">
+      <ion-label>{{ userPastMeal.name }}</ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-button (click)="buttonClick()">
+    Click me
+  </ion-button>
+
   <ion-button expand="full" (click)="logout()">Logout</ion-button>
 </ion-content>
