--- a/src/app/pages/meals/meal/meal.page.html
+++ b/src/app/pages/meals/meal/meal.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="meals"></ion-back-button>
+      <ion-back-button
+        routerDirection="back"
+        routerLink="/app/meals"
+      ></ion-back-button>
     </ion-buttons>
     <ion-title>Book Meal</ion-title>
   </ion-toolbar>
