--- a/src/app/pages/meals/meals.page.html
+++ b/src/app/pages/meals/meals.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header translucent="true" no-border>
   <ion-toolbar>
     <ion-title>
       Find your meal!
@@ -7,7 +7,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let meal of meals" (click)="openMealInTab(meal.id)">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-card
+    *ngFor="let meal of meals"
+    (click)="openMealInTab(meal.id)"
+    routerDirection="forward"
+  >
     <ion-card-header>
       <ion-card-title color="primary">{{ meal.name }}</ion-card-title>
       <ion-card-subtitle color="primary">{{ meal.city }}</ion-card-subtitle>
