--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -50,7 +50,14 @@
       ></ion-input>
       <ion-icon (click)="addValue()" name="add-circle"></ion-icon>
     </ion-item>
-    <ion-button margin expand="block" color="primary" type="submit">
+    <ion-button
+      margin
+      expand="block"
+      color="primary"
+      type="submit"
+      [routerLink]="['/app/profile']"
+      (click)="dismiss()"
+    >
       Book
     </ion-button>
   </form>
