--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <form [formGroup]="credentialsForm" (ngSubmit)="onSubmit()">
     <ion-item>
       <ion-label position="floating">Email</ion-label>
