--- a/src/app/pages/meals/meal/meal.page.html
+++ b/src/app/pages/meals/meal/meal.page.html
@@ -10,47 +10,85 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-img
-    src="https://fluidideas.s3-eu-west-1.amazonaws.com/caba/s3fs-public/styles/article_image/public/Article-image---wellness-plate_0.jpg?kjQK.GibI0ouMDE5bV1ANbbQpc5L5c8L&itok=Ab2ESlBd"
-  ></ion-img>
-  <ion-list *ngIf="meal">
-    <ion-item lines="none">
-      <ion-icon name="time" slot="start"></ion-icon>
-      <ion-datetime
-        displayFormat="DD/MM/YYYY HH:mm"
-        value="{{ meal.pickup_time }}"
-      ></ion-datetime>
+<ion-content color="light" *ngIf="meal">
+  <img class="meal-image" src="{{ meal.meal_image_url }}" />
+  <ion-list>
+    <ion-list-header>{{ meal.name }}</ion-list-header>
+    <ion-item>
+      <ion-label *ngIf="user">
+        <p>Cooked by: <i>{{ user.name}}</i></p>
+      </ion-label>
+      <ion-avatar slot="end">
+        <img
+          src="https://ionicframework.com/docs/demos/api/avatar/avatar.svg"
+        />
+      </ion-avatar>
     </ion-item>
-    <ion-item padding lines="none">
-      <ion-text>
-        <h1>{{ meal.name }}</h1>
-        <p>{{ meal.description }}</p>
-
+    <ion-item lines="none">
+      <p>{{ meal.description }}</p>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>
         <ion-chip *ngFor="let tag of tags" color="primary">
           <ion-label>{{ tag }}</ion-label>
         </ion-chip>
-
-        <p>{{ meal.address }}</p>
-        <p>{{ meal.zip }} {{ meal.city }}</p>
-        <p></p>
-        <p *ngIf="!meal.cook_provides_packaging">
-          You need to bring your own packaging for the food
-        </p>
-        <p *ngIf="meal.cook_provides_packaging">
-          The cook will provide packaging for you meal
-        </p>
-        <p>{{ meal.amount }} meals left</p>
-      </ion-text>
+      </ion-label>
     </ion-item>
   </ion-list>
 
-  <ion-button
-    (click)="presentModal(meal.id)"
-    fill="solid"
-    shape="round"
-    type="submit"
-  >
-    Book meal
-  </ion-button>
+  <ion-item-divider color="light"> </ion-item-divider>
+  <ion-list>
+    <ion-list-header>Address and time</ion-list-header>
+    <ion-item lines="none">
+      <ion-icon name="location-outline" slot="start"> </ion-icon>
+      <ion-label class="ion-text-wrap">
+        <p>{{ meal.address }}</p>
+        <p>{{ meal.zip }} {{ meal.city }}</p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="time-outline"></ion-icon>
+      <ion-datetime
+        value="{{meal.pickup_time}}"
+        display-format="DD.MM.YYYY HH:mm"
+      >
+      </ion-datetime>
+    </ion-item>
+  </ion-list>
+  <ion-item-divider color="light"> </ion-item-divider>
+  <ion-list>
+    <ion-list-header>
+      Practical
+    </ion-list-header>
+    <ion-item>
+      <ion-label>Packaging provided by</ion-label>
+      <ion-chip *ngIf="!meal.cook_provides_packaging">
+        You
+      </ion-chip>
+      <ion-chip *ngIf="meal.cook_provides_packaging">
+        Cook
+      </ion-chip>
+    </ion-item>
+    <ion-item>
+      <ion-label>Meals left</ion-label>
+      <ion-chip> {{ meal.amount }} </ion-chip>
+    </ion-item>
+  </ion-list>
+
+  <ion-row>
+    <ion-col></ion-col>
+    <ion-col>
+      <ion-button
+        (click)="presentModal(meal.id)"
+        fill="solid"
+        shape="round"
+        type="submit"
+        padding="none"
+        margin="none"
+      >
+        Book meal
+      </ion-button>
+    </ion-col>
+    <ion-col></ion-col>
+  </ion-row>
 </ion-content>
