--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -4,51 +4,69 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-item color="primary" lines="none" padding-top padding-bottom>
+<ion-content color="light">
+  <ion-item
+    color="primary"
+    lines="none"
+    class="ion-padding-top ion-padding-bottom"
+  >
     <ion-avatar slot="start">
       <img src="https://ionicframework.com/docs/demos/api/avatar/avatar.svg" />
     </ion-avatar>
     <ion-label>{{ user.email }}</ion-label>
     <ion-icon
       slot="end"
-      name="cog"
+      name="cog-outline"
       routerLink="/app/profile/info"
       routerDirection="forward"
     ></ion-icon>
   </ion-item>
-  <ion-item-divider>
+  <ion-item-divider color="light">
     <ion-label>UPCOMING</ion-label>
   </ion-item-divider>
   <ion-list>
-    <ion-list-header color="primary">
+    <ion-list-header>
       <ion-label>Your upcoming meal pickups</ion-label>
     </ion-list-header>
-    <ion-item *ngFor="let userFutureOrder of userFutureOrders">
-      <ion-label>{{ userFutureOrder.name }}</ion-label>
+    <ion-item
+      detail="true"
+      (click)="openMealPickupList(userFutureOrder.id)"
+      *ngFor="let userFutureOrder of userFutureOrders"
+    >
+      <ion-label>
+        <h2>{{ userFutureOrder.name }}</h2>
+        <p>{{ userFutureOrder.amount }} meals</p>
+      </ion-label>
     </ion-item>
-
-    <ion-list-header color="primary">
+  </ion-list>
+  <ion-list>
+    <ion-list-header *ngIf="!userFutureMeals.length==0">
       <ion-label>Your upcoming meal handouts</ion-label>
     </ion-list-header>
     <ion-item
+      detail="true"
       (click)="openMealHandoutList(userFutureMeal.id)"
       *ngFor="let userFutureMeal of userFutureMeals"
     >
       <ion-label>{{ userFutureMeal.name }}</ion-label>
     </ion-item>
   </ion-list>
-  <ion-item-divider>
-    <ion-label padding-top>HISTORY</ion-label>
+  <ion-item-divider
+    color="light"
+    *ngIf="!userPastOrders.length==0 || !userPastMeals.length==0"
+  >
+    HISTORY
   </ion-item-divider>
   <ion-list>
-    <ion-list-header color="primary">
+    <ion-list-header *ngIf="!userPastOrders.length==0">
       <ion-label>Meals you ate</ion-label>
     </ion-list-header>
     <ion-item *ngFor="let userPastOrder of userPastOrders">
       <ion-label>{{ userPastOrder.name }}</ion-label>
     </ion-item>
-    <ion-list-header color="primary">
+  </ion-list>
+  <ion-list>
+    <ion-list-header *ngIf="!userPastMeals.length==0">
       <ion-label>Meals you cooked</ion-label>
     </ion-list-header>
     <ion-item *ngFor="let userPastMeal of userPastMeals">
