--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="meals">
-      <ion-icon name="pizza"></ion-icon>
+      <ion-icon name="pizza-outline"></ion-icon>
       <ion-label>Meals</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="cook">
-      <ion-icon name="cube"></ion-icon>
+      <ion-icon name="cube-outline"></ion-icon>
       <ion-label>Cook</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
-      <ion-icon name="person"></ion-icon>
+      <ion-icon name="person-outline"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
