--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,3 +84,9 @@ ion-toolbar {
 .more-lines {
   flex-flow: column;
 }
+
+.meal-image {
+  max-height: 220px;
+  min-width: 100%;
+  object-fit: cover;
+}
