--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -90,3 +90,15 @@ ion-toolbar {
   min-width: 100%;
   object-fit: cover;
 }
+
+.add-and-subtract-icons {
+  font-size: 50px;
+}
+
+.bigger-font-size {
+  font-size: 20px;
+}
+
+.smaller-font-size {
+  font-size: 14px;
+}
